fix: whitespace only text node
see https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Whitespace

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -264,6 +264,11 @@ table {
   }
 }
 
+.tags {
+  display: flex;
+  gap: 0.3em;
+}
+
 .tags_box {
   list-style:none;
   margin:0;
